fix: apply Guardian compliance fixes (8 issues addressed)