@@ -1,14 +1,12 @@
 package com.example.management.infrastructure.adapters.in.web;
 
+import com.example.management.application.ports.in.CreateOrderCommand;
 import com.example.management.application.ports.in.CreateOrderUseCase;
 import com.example.management.application.ports.in.GetOrderUseCase;
+import com.example.management.application.ports.in.UpdateOrderStatusCommand;
 import com.example.management.application.ports.in.UpdateOrderStatusUseCase;
-import com.example.management.domain.model.Money;
-import com.example.management.domain.model.Order;
+import com.example.management.application.services.OrderService;
 import com.example.management.domain.model.OrderId;
-import com.example.management.domain.model.OrderItem;
-import com.example.management.domain.model.OrderStatus;
-import com.example.management.domain.model.Quantity;
 import com.example.management.infrastructure.adapters.in.web.dto.CreateOrderRequest;
 import com.example.management.infrastructure.adapters.in.web.dto.OrderResponse;
 import com.example.management.infrastructure.adapters.in.web.dto.UpdateOrderStatusRequest;
@@ -16,9 +14,6 @@ import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Controlador REST para la gestión de órdenes.
@@ -31,35 +26,44 @@ public class OrderController {
     private final CreateOrderUseCase createOrderUseCase;
     private final GetOrderUseCase getOrderUseCase;
     private final UpdateOrderStatusUseCase updateOrderStatusUseCase;
+    private final OrderService orderService;
     
     public OrderController(
             CreateOrderUseCase createOrderUseCase,
             GetOrderUseCase getOrderUseCase,
-            UpdateOrderStatusUseCase updateOrderStatusUseCase) {
+            UpdateOrderStatusUseCase updateOrderStatusUseCase,
+            OrderService orderService) {
         this.createOrderUseCase = createOrderUseCase;
         this.getOrderUseCase = getOrderUseCase;
         this.updateOrderStatusUseCase = updateOrderStatusUseCase;
+        this.orderService = orderService;
     }
     
     @PostMapping
     public ResponseEntity<OrderResponse> createOrder(@Valid @RequestBody CreateOrderRequest request) {
-        OrderId orderId = new OrderId(request.orderId());
-        List<OrderItem> items = request.items().stream()
-            .map(item -> new OrderItem(
-                item.productId(),
-                new Money(item.unitPrice()),
-                new Quantity(item.quantity())
-            ))
-            .collect(Collectors.toList());
+        CreateOrderCommand command = new CreateOrderCommand(
+            request.orderId(),
+            request.items().stream()
+                .map(item -> new CreateOrderCommand.OrderItemCommand(
+                    item.productId(),
+                    String.valueOf(item.unitPrice()),
+                    item.quantity()
+                ))
+                .toList()
+        );
         
-        Order order = createOrderUseCase.createOrder(orderId, items);
-        return ResponseEntity.status(HttpStatus.CREATED).body(OrderResponse.from(order));
+        var order = createOrderUseCase.createOrder(command);
+        Double total = orderService.calculateOrderTotal(order);
+        return ResponseEntity.status(HttpStatus.CREATED).body(OrderResponse.from(order, total));
     }
     
     @GetMapping("/{orderId}")
     public ResponseEntity<OrderResponse> getOrder(@PathVariable String orderId) {
         return getOrderUseCase.getOrder(new OrderId(orderId))
-            .map(order -> ResponseEntity.ok(OrderResponse.from(order)))
+            .map(order -> {
+                Double total = orderService.calculateOrderTotal(order);
+                return ResponseEntity.ok(OrderResponse.from(order, total));
+            })
             .orElse(ResponseEntity.notFound().build());
     }
     
@@ -68,9 +72,10 @@ public class OrderController {
             @PathVariable String orderId,
             @Valid @RequestBody UpdateOrderStatusRequest request) {
         try {
-            OrderStatus newStatus = OrderStatus.valueOf(request.status().toUpperCase());
-            Order updatedOrder = updateOrderStatusUseCase.updateOrderStatus(new OrderId(orderId), newStatus);
-            return ResponseEntity.ok(OrderResponse.from(updatedOrder));
+            UpdateOrderStatusCommand command = new UpdateOrderStatusCommand(orderId, request.status());
+            var updatedOrder = updateOrderStatusUseCase.updateOrderStatus(command);
+            Double total = orderService.calculateOrderTotal(updatedOrder);
+            return ResponseEntity.ok(OrderResponse.from(updatedOrder, total));
         } catch (IllegalArgumentException e) {
             return ResponseEntity.badRequest().build();
         }
